Archive2/4b/a1c3bb76a791ae/output
main.cpp:13:43: error: expected parameter pack before '...'
     conditional< (sizeof...(P)>0), Vertex<...P>, int >  v;
                                           ^
main.cpp:13:47: error: template argument 1 is invalid
     conditional< (sizeof...(P)>0), Vertex<...P>, int >  v;
                                               ^
main.cpp:13:54: error: template argument 2 is invalid
     conditional< (sizeof...(P)>0), Vertex<...P>, int >  v;
                                                      ^
main.cpp:18:51: error: expected primary-expression before ';' token
     static constexpr  unsigned int  n = extent<Tn>;
                                                   ^
main.cpp:20:10: error: size of array 't' is not an integral constant-expression
     T t[n];
          ^
main.cpp:22:30: error: non-static data member declared 'auto'
     auto offset = offset_of(t);
                              ^
main.cpp:23:1: error: expected ';' after struct definition
 }
 ^
